[gd_scene load_steps=11 format=3 uid="uid://dx2mygct0qbnh"]

[ext_resource type="PackedScene" uid="uid://djucgldh3jbvf" path="res://escenas/entity/static/static.tscn" id="1_go58m"]
[ext_resource type="Script" path="res://scripts/entity/static/cofre.gd" id="2_otbnm"]
[ext_resource type="Texture2D" uid="uid://cafn4hp1it35l" path="res://img/static/chest.svg" id="3_gj6u6"]
[ext_resource type="Shader" path="res://shaders/outer_outline.gdshader" id="3_nclkg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_axf0h"]
shader = ExtResource("3_nclkg")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="Animation" id="Animation_3llre"]
resource_name = "chest_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_3kcn1"]
resource_name = "chest_open"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_spwj5"]
_data = {
"chest_close": SubResource("Animation_3llre"),
"chest_open": SubResource("Animation_3kcn1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpshf"]
size = Vector2(106.5, 110)

[sub_resource type="CircleShape2D" id="CircleShape2D_nibr0"]
radius = 125.004

[node name="Cofre" instance=ExtResource("1_go58m")]
position = Vector2(1148, 747)
freeze = true
script = ExtResource("2_otbnm")

[node name="Sprite2D" parent="." index="0"]
material = SubResource("ShaderMaterial_axf0h")
position = Vector2(71.6221, 46.775)
scale = Vector2(0.076469, 0.076469)
texture = ExtResource("3_gj6u6")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_spwj5")
}

[node name="BubbleSpawn1" type="Node2D" parent="Sprite2D" index="1"]
position = Vector2(-590, -560)

[node name="BubbleSpawn2" type="Node2D" parent="Sprite2D" index="2"]
position = Vector2(-130, -560)

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(53.75, 58)
shape = SubResource("RectangleShape2D_xpshf")
disabled = true

[node name="InteractArea" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" index="0"]
visible = false
position = Vector2(53, 56)
shape = SubResource("CircleShape2D_nibr0")

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
